--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,32 @@ C_L-Test/Temp/UnityLockfile
 *.dwlt
 *.info
 *.backup
+C_L-Test/Library/assetDatabase3
+*.txt
+*.mdb
+*.bin
+C_L-Test/Library/metadata/06/0684691ea0054364fb7c9b30ee303485
+C_L-Test/Library/metadata/0e/0e2c7fb6eefcd1b49832a57ff5213bd2
+C_L-Test/Library/metadata/32/325f724a105cf2c4fb276a0f05012424
+C_L-Test/Library/metadata/3b/3b9c119079130984ba15f583d47c27c0
+C_L-Test/Library/metadata/48/48fc5cb96225f3a49be263419b4dc4cd
+C_L-Test/Library/metadata/65/653906dfdf2189e41bb72309dea0eb34
+C_L-Test/Library/metadata/76/76c3291a934f92c428e83426c307b5a1
+C_L-Test/Library/metadata/98/98d3a518f79e45c45b59bf66adfdeaa2
+C_L-Test/Library/metadata/a1/a1fb503d00996774085a80c26050f283
+C_L-Test/Library/metadata/aa/aa1b74ff3b42e9b4380e369e81962edd
+C_L-Test/Library/metadata/ac/ac41b894dd072cb4d9e88948449003af
+C_L-Test/Library/metadata/cc/cc1959df2e30ec54c8271cf7d87939d5
+C_L-Test/Temp/UnityTempFile-059d687ceb478b5468ea01a34c95ab70
+C_L-Test/Temp/UnityTempFile-0a4c69e89421d414090344d9068cd3a4
+C_L-Test/Temp/UnityTempFile-0ec298ad4117eeb4c9a09826a79acdc3
+C_L-Test/Temp/UnityTempFile-12d6919c6a86fd140806102db84089c2
+C_L-Test/Temp/UnityTempFile-1ec2f7cf953b3f74eabf99f3488db974
+C_L-Test/Temp/UnityTempFile-1fef2976b715a6e49b3e9b9a47e451a6
+C_L-Test/Temp/UnityTempFile-26873f126a5be6445946686a0b1a1b80
+C_L-Test/Temp/UnityTempFile-351babbc938b67c4c84bd53bd558efb2
+C_L-Test/Temp/UnityTempFile-5efcf55d5f9a92d4ab4adb76b48ba900
+C_L-Test/Temp/UnityTempFile-64f93753a855aa14c92b68157434aa10
+C_L-Test/Temp/UnityTempFile-682a9739661a6c64e882417bdb5bf400
+C_L-Test/Temp/UnityTempFile-c03130faec4b59b4da1bd311639d6ce3
+C_L-Test/Temp/UnityTempFile-df810719d9ab46f4abe3259a0da8aadd
