--- a/C_L-Test/Assembly-CSharp.csproj
+++ b/C_L-Test/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
      <Compile Include="Assets\AsteroidBehavior.cs" />
      <Compile Include="Assets\BackgroundBehavior.cs" />
+     <Compile Include="Assets\DestroyParticleSystem.cs" />
      <Compile Include="Assets\MonsterBehavior.cs" />
      <Compile Include="Assets\ParticleCollisionOnObject.cs" />
      <Compile Include="Assets\RotLock.cs" />
