--- a/C_L-Test/Assembly-CSharp.csproj
+++ b/C_L-Test/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\DestroyParticleSystem.cs" />
      <Compile Include="Assets\MonsterBehavior.cs" />
      <Compile Include="Assets\ParticleCollisionOnObject.cs" />
+     <Compile Include="Assets\PlasmaTorch.cs" />
      <Compile Include="Assets\RockProjectileBehavior.cs" />
      <Compile Include="Assets\RotLock.cs" />
      <Compile Include="Assets\Rotations.cs" />
