--- a/C_L-Test/Assembly-CSharp.csproj
+++ b/C_L-Test/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\RotLock.cs" />
      <Compile Include="Assets\Rotations.cs" />
      <Compile Include="Assets\enginering.cs" />
+     <Compile Include="Assets\planetPara.cs" />
      <Compile Include="Assets\shipshape.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
